# pyiconlibrary

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.md  listOfFiles_black.txt  listOfFiles_white.txt  pyproject.toml
.github/workflows/: python-package.yml
pyiconlibrary/: __init__.py  icon_utils.py
tests/: test_icon.py
